# lematerial-forgebench

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml  try.ipynb
.github/workflows/: main_checks.yaml
data/: data_props.py  lematbulk_composition_counts_distribution.json  lematbulk_composition_distribution.json  lematbulk_oxi_no_strut.pkl  oxi_dict_probs.json  oxi_state_mapping.json
notebooks/: CoNi.cif  CsBr.cif  CsPbBr3.cif  Demo_charge_neutrality_metric.ipynb  Demo_validity_benchmark.ipynb  crystal_50.cif  example_distribution_metrics.ipynb  example_stability_benchmark.ipynb  small_lematbulk.pkl  validity_workbench.ipynb
scripts/: generate_random_structures.py
src/config/: example.yaml  stability.yaml  validity.yaml
src/lematerial_forgebench/: cli.py  create_store.py  evaluator.py
src/lematerial_forgebench/benchmarks/: base.py  distribution_benchmark.py  stability_benchmark.py  validity_benchmark.py
src/lematerial_forgebench/data/: element_properties.json  structure.py
src/lematerial_forgebench/letmat_scraping/: embedding_df_compiler.py  generate_distribution_datasets.py  lematbulk.py  lematbulk_composition.py  lematbulk_embeddings.py  lematbulk_mlips.py  lematbulk_oxi_states.py  lematbulk_properties.py  oxi_state_dict_generator.py  process_lemat.py
src/lematerial_forgebench/metrics/: __init__.py  base.py  conditional_generation.py  distribution_metrics.py  diversity.py  diversity_metric.py  hhi_metrics.py  novelty.py  novelty_metric.py  stability_metrics.py  sun_metric.py  uniqueness_metric.py  validity_metrics.py
src/lematerial_forgebench/models/: __init__.py  base.py  registry.py
src/lematerial_forgebench/models/equiformer/: __init__.py  calculator.py  embeddings.py
src/lematerial_forgebench/models/mace/: __init__.py  calculator.py  embeddings.py
src/lematerial_forgebench/models/orb/: __init__.py  calculator.py  embeddings.py
src/lematerial_forgebench/models/uma/: __init__.py  calculator.py  embeddings.py
src/lematerial_forgebench/preprocess/: base.py  distribution_preprocess.py  element_chem_pot.json  reference_energies.py  stability_preprocess.py  universal_stability_preprocess.py
src/lematerial_forgebench/utils/: distribution_utils.py  e_above_hull.py  logging.py  oxidation_state.py  utils_test.py
src/lematerial_forgebench/utils/relaxers/: __init__.py  registry.py  relaxers.py
tests/: test_evaluator.py
tests/benchmarks/: test_base_benchmark.py  test_distribution_benchmark.py  test_stability_benchmark.py  test_validity_benchmark.py
tests/integration/: test_novelty_integration.py
tests/metrics/: test_conditional_generation.py  test_distribution_metrics.py  test_hhi_metrics.py  test_metrics_base.py  test_metrics_diversity.py  test_novelty_metric.py  test_stability_metrics.py  test_sun_metrics.py  test_uniqueness_metric.py  test_validity_metrics.py
